# shl

./: .example.env  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/prompts/: plan-shlConversationalRecommender.prompt.md
.github/workflows/: azure-container.yml
app/: __init__.py  llm.py  main.py  recommender.py
scripts/: build_faiss_index.py  check_llm.py  load_test.py  serve_with_env.py  smoke_test.py
tests/: test_recommender.py
